2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/xditview/xditview.c (Syntax): "#if 0" out
	reference to `-noPolyText` option, whose effect is likewise
	bracketed in another file.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (enable_warning, disable_warning):
	Recast diagnostic messages for clarity.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[pfbtops]: Fix code style and diagnostic nits.

	* src/utils/pfbtops/pfbtops.c (error): Exit with `EXIT_FAILURE`
	status (from standard C library) instead of status 2.
	(main): Exit with `EXIT_SUCCESS` status when writing version or
	help information.  Exit with status 2 when dying due to usage
	error.  Use `fprintf()` and `strerror()` to construct error
	message when dying due to inability to open input file instead
	of using `perror()`, which anonymizes its caller and thus should
	never be used in serious work.  Avoid it like `gets()`.
	* NEWS: Add item for exit status changes.

	Continues the long process of fixing Savannah #52463.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man pages]: Don't document macro package compatibility wrapper
	directory if it's not used.

	* Makefile.am (.man): Use sed to replace
	'@COMPATIBILITY_WRAPPERS@' in man page text with value of
	`compatibility_wrappers` shell variable.  Document its purpose.
	* src/preproc/eqn/eqn.1.man (Description):
	* src/preproc/grn/grn.1.man (Options):
	* src/roff/groff/groff.1.man (Installation directories):
	* src/roff/troff/troff.1.man (Environment): Mention
	`@SYSTEMMACRODIR` only if `@COMPATIBILITY_WRAPPERS` expands to
	something other than "no" (it could be "yes" or "manual").

	Thanks to Alexander Kanavin and Jeremy Puhlman for the report.

2022-10-21  Robert Yang <liezhi.yang@windriver.com>

	* font/devpdf/util/BuildFoundries.pl:
	* src/devices/gropdf/gropdf.pl:
	* src/devices/gropdf/pdfmom.pl: Replace use of '-w' in shebang